--- a/src/index.css
+++ b/src/index.css
@@ -43,12 +43,18 @@ html {
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 910px) {
   html {
-    font-size: 22px;
+    font-size: 16px;
   }
 }
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
+/* Extra large devices (large laptops and desktops, 1200px and up)
 @media only screen and (min-width: 1200px) {
+  html {
+    font-size: 16px;
+  }
+} */
+
+@media only screen and (min-width: 1400px) {
   html {
     font-size: 22px;
   }
