--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,12 @@ html {
 }
 @media only screen and (min-width: 300px) {
   html {
-    font-size: 12px;
+    font-size: 10px;
+  }
+}
+@media only screen and (min-width: 360px) {
+  html {
+    font-size: 11px;
   }
 }
 @media only screen and (min-width: 400px) {
