--- a/src/components/FAQPage/FAQPage.css
+++ b/src/components/FAQPage/FAQPage.css
@@ -10,7 +10,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #EEE;
 }
 
 code {
@@ -42,7 +41,6 @@ header h1 {
 .faqs .faq {
 	margin: 10px;
 	padding: 10px;
-	background-color: white;
 	border-radius: 10px;
 }
 
@@ -72,7 +70,7 @@ header h1 {
 	max-height: 0;
 	overflow-y: hidden;
     border-radius: 10px;
-    background-color: rgba(57, 58, 59, 0.911);
+    background-color: #E6EAEE;
 	transition: all 0.4s ease-out;
 }
 
