--- a/src/components/signUp/sign.css
+++ b/src/components/signUp/sign.css
@@ -1,7 +1,7 @@
-.span{
+/*.span{
     color: red;
 }
-/*#logo{
+#logo{
     margin-left: 2rem;
     margin-bottom: 1.5rem;
     width: 120px;
@@ -37,7 +37,7 @@
     max-width: 500px;
     margin: auto;
     padding: 1.3em 0rem;
-}*/
+}
 
 form input{
     margin-bottom: 1rem;
@@ -67,4 +67,4 @@ button{
     text-align: center;
     margin: auto;
     font-size: 0.8rem;
-}
+}/*
