--- a/src/components/signUp/sign.css
+++ b/src/components/signUp/sign.css
@@ -68,3 +68,8 @@ button{
     margin: auto;
     font-size: 0.8rem;
 }/*
+border-bottom-right-radius:0rem;
+border-top-right-radius:0rem;
+
+border-bottom-left-radius:2rem;
+border-top-left-radius:2rem;
