--- a/src/components/LandingPage/TestPage/TestPage.css
+++ b/src/components/LandingPage/TestPage/TestPage.css
@@ -19,36 +19,25 @@
 /* Box 1 styling */
 .box1 {
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.8);
-  border-bottom: 140px solid rgb(124, 200, 187);
-  width: 270px;
+  background: white;
+  border-bottom: 140px solid rgba(173, 216, 230, 0.6);
+  width: 350px;
   height: 220px;
   flex-shrink: 0;
   position: absolute;
   top: 54%;
-  left: 240px;
+  left: 120px;
   transform: translate(0, -50%);
-  color: white;
   padding: 20px;
   z-index: 1;
 }
 
-.box1 img {
-  position: relative;
-  bottom: 15px;
-  left: 80px;
-}
-
-.box2 img {
-  position: relative;
-  bottom: 15px;
-  left: 80px;
-}
-
+.box1 img,
+.box2 img,
 .box3 img {
   position: relative;
   bottom: 15px;
-  left: 80px;
+  left: 120px;
 }
 
 .one p {
@@ -62,34 +51,34 @@
   align-items: center;
   padding-top: 10px;
   white-space: inherit;
+  font-family: Georgia;
 }
 
 h6 {
-  margin: 0;
   white-space: nowrap;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #576071;
-  font-size: 18px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+  padding-top: 20px;
 }
 
 /* Box 2 styling */
 .box2 {
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.8);
-  border-bottom: 140px solid #f3d75c;
-  width: 270px;
+  background: white;
+  border-bottom: 140px solid #ffe4e1;
+  width: 350px;
   height: 220px;
   flex-shrink: 0;
   position: absolute;
   top: 54%;
-  left: 540px;
+  left: 520px;
   transform: translate(0, -50%);
-  color: white;
   padding: 20px;
   z-index: 1;
 }
@@ -97,33 +86,33 @@ h6 {
 /* Box 3 styling */
 .box3 {
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.8);
-  border-bottom: 140px solid #d09eb7;
-  width: 270px;
+  background: white;
+  border-bottom: 140px solid #cdb7e2;
+  width: 350px;
   height: 220px;
   flex-shrink: 0;
   position: absolute;
   top: 54%;
-  left: 840px;
+  left: 920px;
   transform: translate(0, -50%);
-  color: white;
   padding: 20px;
   z-index: 1;
 }
 
 /* Slider code */
 .line {
-  width: 1340px;
-  height: 30px;
+  width: 1345px;
+  height: 40px;
   flex-shrink: 0;
   background: #f1f1f1;
   margin-top: 190px;
 }
-
 .slider-container {
   width: 60%;
-  margin: 0 auto;
+  margin: 10px auto;
   text-align: center;
+  padding-top: 10px;
+  position: relative;
 }
 
 .slider {
@@ -131,13 +120,17 @@ h6 {
 }
 
 #slider-value {
-  font-size: 24px;
+  font-size: 20px;
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 /* Reader  */
 
 .Read {
-  padding: 50px 10px 10px 50px;
+  padding: 30px 10px 10px 50px;
   font-size: 24px;
   color: #06286e;
 }
@@ -168,18 +161,78 @@ h6 {
   margin: 40px;
 }
 
-/* Center the labels under the radio buttons */
+input[type="radio"]:before {
+  content: "";
+  display: block;
+  width: 60%;
+  height: 60%;
+  margin: 20% auto;
+  border-radius: 50%;
+}
+
+input[type="radio"]:checked:before {
+  background: blue;
+}
+
 .radio-btn label {
   position: relative;
   right: 30px;
+  transition: color 0.3s;
+  color: #696671;
+}
+
+.never-input,
+.rarely-input {
+  -webkit-appearance: none;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  outline: none;
+  box-shadow: 0 0 0 2px #5085f3;
+  transition: box-shadow 0.3s;
+}
+
+.sometimes-input {
+  -webkit-appearance: none;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  outline: none;
+  box-shadow: 0 0 0 2px #a6c1f9;
+  transition: box-shadow 0.3s;
+}
+
+.often-input,
+.always-input {
+  -webkit-appearance: none;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  outline: none;
+  box-shadow: 0 0 0 2px #06286e;
+  transition: box-shadow 0.3s;
+}
+
+.never-input:checked,
+.rarely-input:checked,
+.sometimes-input:checked,
+.often-input:checked,
+.always-input:checked {
+  box-shadow: 0 0 0 2px blue;
+}
+
+.never-input:checked + label,
+.rarely-input:checked + label,
+.sometimes-input:checked + label,
+.often-input:checked + label,
+.always-input:checked + label {
+  color: blue; 
 }
 
 /* Next button */
 
-.next-btn {
-  width: fit-content;
-  height: 10vh;
-  margin-top: 20px;
+.button-container {
+  margin-top: 100px;
 }
 
 .next {
@@ -191,13 +244,18 @@ h6 {
   gap: 12px;
   flex-shrink: 0;
   border-radius: 33px;
-  border: 5px solid rgba(22, 78, 192, 0.25);
+  border: 5px solid #add8e6;
   background: linear-gradient(93deg, #06286e -34.91%, #164ec0 135.05%);
   position: absolute;
   top: 1320px;
-  left: 50%;
+  left: 670px;
   transform: translate(-50%, -50%);
-  z-index: 100;
+  z-index: 1;
+  color: #f1f1f1;
+}
+
+.next:hover {
+  border: 5px solid rgba(173, 216, 230, 0.6);
 }
 
 /* Responsive styles */
@@ -206,43 +264,62 @@ h6 {
 
 @media (max-width: 768px) {
   .box1 {
-    width: 280px;
-    height: 20px;
+    width: 300px;
+    height: 40px;
     flex-shrink: 0;
     position: absolute;
     top: 59%;
-    left: 70px;
+    left: 90px;
   }
 
   .box2 {
-    width: 280px;
-    height: 220px;
+    width: 300px;
+    height: 40px;
     flex-shrink: 0;
     position: absolute;
     top: 550px;
-    left: 70px;
-    background: aliceblue;
+    left: 90px;
+    background: white;
   }
 
   .box3 {
-    width: 280px;
-    height: 220px;
+    width: 300px;
+    height: 40px;
     flex-shrink: 0;
     position: absolute;
     top: 800px;
-    left: 70px;
-    background: aliceblue;
+    left: 90px;
+    background: white;
   }
 
+  .box1 img,
+  .box2 img,
+  .box3 img {
+    position: relative;
+    bottom: 15px;
+    left: 100px;
+  }
+
+  
+.one p {
+  font-size: 15px;
+  padding-top: 5px;
+}
+
+h6 {
+  padding-top: 5px;
+}
+
   .line {
-    width: 408px;
+    width: 440px;
     height: 30px;
     margin-top: 680px;
   }
 
   .question {
-    font-size: 8.4px;
+    font-size: 8.8px;
     font-weight: 800;
+    line-height: 2.5; 
   }
 
   .radio-btn {
@@ -250,14 +327,16 @@ h6 {
   }
 
   .radio-btn input[type="radio"] {
-    width: 15px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     margin: 5px;
+    border-radius: 50%;
   }
 
   .radio-btn label {
     position: relative;
     right: 0px;
+    font-size: 10px;
   }
 
   .next-btn {
@@ -268,7 +347,12 @@ h6 {
   .next {
     padding: 15px 30px;
     top: 1370px;
-    left: 50%;
+    left: 220px;
+  }
+
+  .prev {
+    padding: 15px 30px;
+    top: 1370px;
+    left: 150px;
   }
 }
-
