--- a/src/components/LandingPage/TestPage/TestPage.css
+++ b/src/components/LandingPage/TestPage/TestPage.css
@@ -1,3 +1,7 @@
+body {
+  font-size: 20px;
+}
+
 .head {
   background: #06286e;
   color: white;
@@ -15,21 +19,36 @@
   font-size: 30px;
   font-weight: 800;
 }
-
 /* Box 1 styling */
-.box1 {
+
+.box1,
+.box2,
+.box3 {
   border-radius: 10px;
   background: white;
-  border-bottom: 140px solid rgba(173, 216, 230, 0.6);
-  width: 350px;
   height: 220px;
-  flex-shrink: 0;
-  position: absolute;
-  top: 54%;
-  left: 120px;
-  transform: translate(0, -50%);
   padding: 20px;
-  z-index: 1;
+  transform: translate(0, -50%);
+  width: 27%;
+  top: 56%;
+}
+
+.box1 {
+  border-bottom: 140px solid rgba(173, 216, 230, 0.6);
+  position: absolute;
+  left: 9%;
+}
+
+.box2 {
+  border-bottom: 140px solid #ffe4e1;
+  position: absolute;
+  left: 38.5%;
+}
+
+.box3 {
+  border-bottom: 140px solid #cdb7e2;
+  position: absolute;
+  left: 68%;
 }
 
 .box1 img,
@@ -67,52 +86,19 @@ h6 {
   padding-top: 20px;
 }
 
-/* Box 2 styling */
-.box2 {
-  border-radius: 10px;
-  background: white;
-  border-bottom: 140px solid #ffe4e1;
-  width: 350px;
-  height: 220px;
-  flex-shrink: 0;
-  position: absolute;
-  top: 54%;
-  left: 520px;
-  transform: translate(0, -50%);
-  padding: 20px;
-  z-index: 1;
-}
-
-/* Box 3 styling */
-.box3 {
-  border-radius: 10px;
-  background: white;
-  border-bottom: 140px solid #cdb7e2;
-  width: 350px;
-  height: 220px;
-  flex-shrink: 0;
-  position: absolute;
-  top: 54%;
-  left: 920px;
-  transform: translate(0, -50%);
-  padding: 20px;
-  z-index: 1;
-}
-
 /* Slider code */
 .line {
-  width: 1345px;
+  width: 100%;
   height: 40px;
   flex-shrink: 0;
   background: #f1f1f1;
-  margin-top: 190px;
+  margin-top: 220px;
 }
 .slider-container {
-  width: 60%;
+  width: 100%; 
   margin: 10px auto;
   text-align: center;
   padding-top: 10px;
-  position: relative;
 }
 
 .slider {
@@ -120,12 +106,15 @@ h6 {
 }
 
 #slider-value {
-  font-size: 20px;
+  font-size: 16px;
   position: absolute;
-  top: -30px;
+  text-align: center;
+  top: 80%;
   left: 50%;
   transform: translateX(-50%);
+  width: auto;
 }
+
 
 /* Reader  */
 
@@ -133,16 +122,23 @@ h6 {
   padding: 30px 10px 10px 50px;
   font-size: 24px;
   color: #06286e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+
 
 .question {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0px auto;
+  margin: 10px auto;
   white-space: nowrap;
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 500;
+  font-style: normal;
+  padding-top: 20px;
 }
 
 /* Custom CSS for radio buttons with labels below */
@@ -153,12 +149,13 @@ h6 {
   align-items: center;
   justify-content: center;
   margin-right: 50px !important;
+  margin-left: 50px !important;
 }
 
 .radio-btn input[type="radio"] {
   width: 24px;
   height: 24px;
-  margin: 40px;
+  margin: 30px;
 }
 
 input[type="radio"]:before {
@@ -177,17 +174,16 @@ input[type="radio"]:checked:before {
 .radio-btn label {
   position: relative;
   top: 40px;
-  right: 70px;
+  right: 65px;
   transition: color 0.3s;
   color: #696671;
 }
 
-.sometimes{
+.sometimes {
   position: relative !important;
   top: 40px !important;
-  right: 55px !important;
+  right: 45px !important;
 }
-
 
 .never-input,
 .rarely-input {
@@ -236,7 +232,7 @@ input[type="radio"]:checked:before {
 .sometimes-input:checked + label,
 .often-input:checked + label,
 .always-input:checked + label {
-  color: blue; 
+  color: blue;
 }
 
 /* Next button */
@@ -246,22 +242,19 @@ input[type="radio"]:checked:before {
 }
 
 .next {
-  display: inline-flex;
-  height: 54px;
-  padding: 18px 32px;
+  display: flex;
+  height: 10vh;
+  padding: 15px 20px;
   justify-content: center;
   align-items: center;
   gap: 12px;
-  flex-shrink: 0;
   border-radius: 33px;
   border: 5px solid #add8e6;
   background: linear-gradient(93deg, #06286e -34.91%, #164ec0 135.05%);
-  position: absolute;
-  top: 1340px;
-  left: 670px;
-  transform: translate(-50%, -50%);
-  z-index: 1;
   color: #f1f1f1;
+  transform: translate(5%, -50%);
+  margin: 10px auto;
+  max-width: 300px;
 }
 
 .next:hover {
@@ -273,93 +266,179 @@ input[type="radio"]:checked:before {
 /* For Mobile Phones */
 
 @media (max-width: 768px) {
-  .box1 {
-    width: 300px;
-    height: 40px;
-    flex-shrink: 0;
-    position: absolute;
-    top: 59%;
-    left: 90px;
+
+  body {
+    position: relative;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
+  .h1 {
+    font-size: 25px !important;
+    font-weight: 800 !important;
   }
 
-  .box2 {
-    width: 300px;
-    height: 40px;
-    flex-shrink: 0;
-    position: absolute;
-    top: 550px;
-    left: 90px;
-    background: white;
+  .head{
+    padding: 90px 20px 20px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
   }
 
+  .head p {
+    font-size: 15px !important;
+  }
+
+  .box1,
+  .box2,
   .box3 {
-    width: 300px;
-    height: 40px;
-    flex-shrink: 0;
-    position: absolute;
-    top: 800px;
-    left: 90px;
-    background: white;
+    width: 80%;
+    margin: 60px auto auto;
+    position: static;
   }
 
   .box1 img,
   .box2 img,
   .box3 img {
-    position: relative;
-    bottom: 15px;
-    left: 100px;
+    width: 15%;
+    margin: 5px auto auto;
+    position: static;
   }
 
-  
-.one p {
-  font-size: 15px;
-  padding-top: 5px;
-}
+  .one p {
+    font-size: 15px;
+    padding-top: 5px;
+  }
 
-h6 {
-  padding-top: 5px;
-}
+  h6 {
+    padding-top: 15px;
+  }
 
   .line {
-    width: 440px;
-    height: 30px;
-    margin-top: 680px;
+    width: 100%;
+    height: 35px;
+    margin-top: 5px;
+  }
+
+  #slider-value {
+    font-size: 16px;
+    position: absolute;
+    text-align: center;
+    top: 48%;
   }
 
   .question {
-    font-size: 8.8px;
+    font-size: 7.5px; 
+    max-width: 90%;
+    margin: auto 20px;
+    line-height: 6;
     font-weight: 800;
-    line-height: 7; 
   }
 
   .radio-btn {
-    margin-right: 10px !important;
+    margin-right: 20px !important;
+    margin-left: 20px !important;
   }
 
   .radio-btn input[type="radio"] {
-    width: 20px;
-    height: 20px;
-    margin: 5px;
+    width: 15px !important;
+    height: 15px !important;
+    margin: 30px;
     border-radius: 50%;
   }
 
   .radio-btn label {
     position: relative;
-    right: 35px;
-    top: 30px;
-    font-size: 10px;
-  }
-
-  .sometimes{
-    position: relative !important;
+    right: 33px !important;
     top: 30px !important;
-    right: 28px !important;
+    font-size: 10px !important;
   }
 
+  .sometimes ,
   .often{
     position: relative !important;
     top: 30px !important;
-    right: 27px !important;
+    right: 33px !important;
+  }
+
+  .sometimes-input {
+    -webkit-appearance: none;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    outline: none;
+    box-shadow: 0 0 0 2px #a6c1f9;
+    transition: box-shadow 0.3s;
+    position: relative;
+    left: 14px !important;
+  }
+
+  .next{
+    height: 6vh;
+  }
+}
+
+@media (max-width: 1024px) {
+  .h1 {
+    font-size: 40px;
+    font-weight: 800;
+  }
+
+
+  .head p {
+    font-size: 25px;
+  }
+
+  .box1 img,
+  .box2 img,
+  .box3 img {
+    width: 20%;
+    margin: 2px auto auto;
+    position: static;
+  }
+
+  .one p {
+    font-size: 15px;
+    padding-top: 5px;
+  }
+
+  h6 {
+    font-size: 15px;
+    padding-top: 15px;
+    font-weight: 800;
+  }
+
+
+
+  .radio-btn {
+    margin-right: 10px !important;
+    margin-left: 10px !important;
+  }
+
+  .radio-btn input[type="radio"] {
+    width: 30px;
+    height: 30px;
+    margin: 10px;
+    border-radius: 50%;
+  }
+
+  .radio-btn label {
+    position: relative;
+    right: 46px;
+    top: 32px;
+    font-size: 16px;
+  }
+
+  .sometimes,
+  .often {
+    position: relative !important;
+    top: 32px !important;
+    right: 44px !important;
   }
 
   .sometimes-input {
@@ -374,15 +453,11 @@ h6 {
     left: 17px;
   }
 
-  .next {
-    padding: 15px 30px;
-    top: 1580px;
-    left: 220px;
+  .question {
+    font-size: 16px; 
   }
 
-  .prev {
-    padding: 15px 30px;
-    top: 1370px;
-    left: 150px;
+  .next{
+    height: 6vh;
   }
 }
