--- a/src/components/LandingPage/TestPage/TestPage.css
+++ b/src/components/LandingPage/TestPage/TestPage.css
@@ -31,6 +31,7 @@ body {
   transform: translate(0, -50%);
   width: 27%;
   top: 56%;
+  border: 2px;
 }
 
 .box1 {
@@ -130,9 +131,9 @@ h6 {
 
 .question {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-  margin: 10px auto;
+  margin: 50px 20%;
   white-space: nowrap;
   font-size: 20px;
   font-weight: 500;
@@ -149,13 +150,15 @@ h6 {
   justify-content: center;
   margin-right: 50px !important;
   margin-left: 50px !important;
+
 }
 
 .radio-btn input[type="radio"] {
   width: 24px;
   height: 24px;
-  margin: 30px;
+  margin: 0px 40px;
 }
+
 
 input[type="radio"]:before {
   content: "";
@@ -174,6 +177,7 @@ input[type="radio"]:checked:before {
   position: relative;
   top: 40px;
   right: 65px;
+  bottom: 50px;
   transition: color 0.3s;
   color: #696671;
 }
@@ -184,7 +188,7 @@ input[type="radio"]:checked:before {
   right: 45px !important;
 }
 
-.never-input,
+/*.never-input,
 .rarely-input {
   -webkit-appearance: none;
   width: 10px;
@@ -193,7 +197,7 @@ input[type="radio"]:checked:before {
   outline: none;
   box-shadow: 0 0 0 2px #5085f3;
   transition: box-shadow 0.3s;
-}
+}*/
 
 .sometimes-input {
   -webkit-appearance: none;
@@ -329,10 +333,13 @@ input[type="radio"]:checked:before {
     top: 5%;
   }
 
+
   .question {
     font-size: 7.5px !important;
     max-width: 90%;
-    margin: auto 20px;
+    text-align: center;
+    margin: auto 30px;
+    padding-left: 20px;
     line-height: 6;
     font-weight: 800;
   }
@@ -379,6 +386,7 @@ input[type="radio"]:checked:before {
     height: 6vh;
   }
 }
+
 
 @media (max-width: 1024px) {
   .h1 {
@@ -455,5 +463,177 @@ input[type="radio"]:checked:before {
 
   .next{
     height: 6vh;
+  }
+}
+
+
+
+/*============Emma's styling=============*/
+.wrap{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin-top: 2rem;
+  margin: auto;
+  text-align: start;
+  width: 80%;
+  /*border: 2px solid green;*/
+}
+.wrap ul li{
+  list-style-type: none;
+}
+
+.wrap .quest-head{
+  font-size: 1rem;
+  padding: 1rem 0rem;
+  color: #131314;
+  font-weight: 500;
+}
+.option-holder{
+  display: flex;
+  justify-content: space-evenly;
+
+}
+.input-wrapper{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.1rem;
+  font-size: 1.2rem;
+  align-items: center;
+}
+#input{
+  width: 25px;
+  height: 25px;
+}
+#label{
+  padding-top: 0.8rem;
+  color: #696671;
+  font-size: 1rem;
+}
+
+input[type="radio"]:nth-child(1) {
+  border: 1px solid rgb(11, 96, 146);
+}
+
+input[type="radio"]:nth-child(2) {
+  border: 1px solid rgb(11, 96, 146);
+}
+
+input[type="radio"]:nth-child(3) {
+  border: 1px solid rgb(113, 195, 218);
+}
+
+input[type="radio"]:nth-child(4) {
+  border: 1px solid navy;
+}
+
+input[type="radio"]:nth-child(5) {
+  border: 1px solid navy;
+}
+
+
+.next-button{
+  text-align: center;
+  margin: 2rem;
+}
+.next-button button{
+  display: flex;
+  height: 7vh;
+  padding: 15px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  border-radius: 33px;
+  border: 5px solid #add8e6;
+  background: linear-gradient(93deg, #06286e -34.91%, #164ec0 135.05%);
+  color: #f1f1f1;
+  transform: translate(5%, -50%);
+  margin: 10px auto;
+  width: 150px;
+}
+input[type="radio"]:checked:before {
+  background: blue;
+}
+
+input[type="radio"].selected {
+  border-color: blue;
+}
+label.selected {
+  color: blue;
+}
+
+@media (max-width:1024px){
+  .wrap{
+    width: 90%;
+
+  }
+  .wrap .quest-head{
+    font-size: 1rem;
+    padding: 1rem 0rem;
+    color: #28282b;
+    font-weight: 500;
+  }
+  #input{
+    width: 20px;
+    height: 20px;
+  }
+}
+
+@media (max-width:768px){
+  .container{
+    margin: 3rem 1.5rem;
+  }
+  .wrap{
+    width: 85%;
+
+  }
+  .wrap .quest-head{
+    font-size: 0.8rem;
+    padding: 1rem 0rem;
+    color: #28282b;
+    font-weight: 500;
+  }
+  #input{
+    width: 17px;
+    height: 17px;
+  }
+  #label{
+    padding-top: 0.8rem;
+    color: #696671;
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width:550px){
+  .container{
+    margin: 1.3rem;
+  }
+  .wrap{
+    width: 90%;
+
+  }
+  .wrap .quest-head{
+    font-size: 0.7rem;
+    padding: 1rem 0rem;
+    margin-left: 0.8rem;
+    color: #000000;
+    font-weight: 600;
+
+  }
+  .input-wrapper{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0.8rem;
+    align-items: center;
+  }
+
+  #input{
+    width: 12px;
+    height: 12px;
+  }
+  #label{
+    padding-top: 0.9rem;
+    color: #696671;
+    font-size: 0.6rem;
   }
 }
