--- a/src/components/LandingPage/TestPage/TestPage.css
+++ b/src/components/LandingPage/TestPage/TestPage.css
@@ -93,11 +93,14 @@ h6 {
   height: 40px;
   flex-shrink: 0;
   background: #f1f1f1;
+  color: #0f286e;
+  font-weight: 600;
   margin-top: 220px;
 }
 .slider-container {
-  width: 90%;
-  margin: 10px auto;
+  width: 70%;
+  margin: auto;
+  color: #0f286e;
   text-align: center;
   padding-top: 10px;
   position: relative;
@@ -111,7 +114,7 @@ h6 {
   font-size: 16px;
   position: absolute;
   text-align: center;
-  top: -20px;
+  top: -5px;
   left: 50%;
   transform: translateX(-50%);
   width: auto;
@@ -122,7 +125,7 @@ h6 {
 
 .Read {
   padding: 30px 10px 10px 50px;
-  font-size: 24px;
+  font-size: 20px;
   color: #06286e;
   font-weight: 600;
   display: flex;
@@ -485,14 +488,15 @@ input[type="radio"]:checked:before {
 }
 
 .wrap .quest-head{
-  font-size: 1rem;
+  font-size: 0.8rem;
   padding: 1rem 0rem;
-  color: #131314;
+  color: #57555d;
+  text-align: center;
   font-weight: 500;
 }
 .option-holder{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
 
 }
 .input-wrapper{
@@ -503,13 +507,14 @@ input[type="radio"]:checked:before {
   align-items: center;
 }
 .input-box{
-  width: 25px;
-  height: 25px;
+  width: 16px;
+  height: 16px;
+  margin: 0rem 1.9rem;
 }
 #label{
   padding-top: 0.8rem;
   color: #696671;
-  font-size: 1rem;
+  font-size: 0.7rem;
 }
 
 input[type="radio"]:nth-child(1) {
