--- a/src/components/LandingPage/TestPage/TestPage.css
+++ b/src/components/LandingPage/TestPage/TestPage.css
@@ -599,9 +599,9 @@ input[type="radio"].selected {
     color: #28282b;
     font-weight: 500;
   }
-  #input{
-    width: 17px;
-    height: 17px;
+  .input-box{
+    width: 12px;
+    height: 12px;
   }
   #label{
     padding-top: 0.8rem;
