--- a/src/components/LandingPage/TestPage/TestPage.css
+++ b/src/components/LandingPage/TestPage/TestPage.css
@@ -164,7 +164,7 @@ h6 {
 }
 
 
-input[type="radio"]:before {
+/*input[type="radio"]:before {
   content: "";
   display: block;
   width: 60%;
@@ -172,19 +172,7 @@ input[type="radio"]:before {
   margin: 20% auto;
   border-radius: 50%;
 }
-
-input[type="radio"]:checked:before {
-
-}
-
-.radio-btn label {
-  position: relative;
-  top: 40px;
-  right: 65px;
-  bottom: 50px;
-  transition: color 0.3s;
-  color: #696671;
-}
+*/
 
 .sometimes {
   position: relative !important;
@@ -203,44 +191,6 @@ input[type="radio"]:checked:before {
   transition: box-shadow 0.3s;
 }*/
 
-.sometimes-input {
-  -webkit-appearance: none;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  outline: none;
-  box-shadow: 0 0 0 2px #a6c1f9;
-  transition: box-shadow 0.3s;
-  position: relative;
-  left: 40px;
-}
-
-.often-input,
-.always-input {
-  -webkit-appearance: none;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  outline: none;
-
-  transition: box-shadow 0.3s;
-}
-
-.never-input:checked,
-.rarely-input:checked,
-.sometimes-input:checked,
-.often-input:checked,
-.always-input:checked {
-
-}
-
-.never-input:checked + label,
-.rarely-input:checked + label,
-.sometimes-input:checked + label,
-.often-input:checked + label,
-.always-input:checked + label {
-  /*color: blue;*/
-}
 
 /* Next button */
 
@@ -374,18 +324,6 @@ input[type="radio"]:checked:before {
     right: 33px !important;
   }
 
-  .sometimes-input {
-    -webkit-appearance: none;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    outline: none;
-    box-shadow: 0 0 0 2px #a6c1f9;
-    transition: box-shadow 0.3s;
-    position: relative;
-    left: 14px !important;
-  }
-
   .next{
     height: 6vh;
   }
@@ -511,30 +449,15 @@ input[type="radio"]:checked:before {
   height: 16px;
   margin: 0rem 1.9rem;
 }
-#label{
+/*.checked{
   padding-top: 0.8rem;
   color: #696671;
   font-size: 0.7rem;
-}
+}*/
 
-input[type="radio"]:nth-child(1) {
-  border: 1px solid rgb(11, 96, 146);
-}
-
-input[type="radio"]:nth-child(2) {
-  border: 1px solid rgb(11, 96, 146);
-}
-
-input[type="radio"]:nth-child(3) {
-  border: 1px solid rgb(113, 195, 218);
-}
-
-input[type="radio"]:nth-child(4) {
-  border: 1px solid navy;
-}
-
-input[type="radio"]:nth-child(5) {
-  border: 1px solid rgb(10, 10, 140);
+.input-box:checked + label {
+  background-color: blue;
+  color: blue;
 }
 
 
@@ -557,7 +480,7 @@ input[type="radio"]:nth-child(5) {
   margin: 10px auto;
   width: 150px;
 }
-input[type="radio"]:checked:before {
+/*input[type="radio"]:checked:before {
   background: blue;
 }
 
@@ -566,7 +489,7 @@ input[type="radio"].selected {
 }
 .selected {
   color: blue;
-}
+}*/
 
 @media (max-width:1024px){
   .wrap{
@@ -603,7 +526,7 @@ input[type="radio"].selected {
     width: 12px;
     height: 12px;
   }
-  #label{
+  .checked{
     padding-top: 0.8rem;
     color: #696671;
     font-size: 0.8rem;
@@ -637,7 +560,7 @@ input[type="radio"].selected {
     width: 12px;
     height: 12px;
   }
-  #label{
+  .cheked{
     padding-top: 0.9rem;
     color: #696671;
     font-size: 0.6rem;
