--- a/src/components/LandingPage/TestPage/TestPage.css
+++ b/src/components/LandingPage/TestPage/TestPage.css
@@ -114,6 +114,7 @@ h6 {
   font-size: 16px;
   position: absolute;
   text-align: center;
+  visibility: hidden;
   top: -5px;
   left: 50%;
   transform: translateX(-50%);
@@ -449,11 +450,11 @@ h6 {
   height: 16px;
   margin: 0rem 1.9rem;
 }
-/*.checked{
+.checked{
   padding-top: 0.8rem;
   color: #696671;
   font-size: 0.7rem;
-}*/
+}
 
 .input-box:checked + label {
   color: blue;
