--- a/src/components/LandingPage/TestPage/TestPage.css
+++ b/src/components/LandingPage/TestPage/TestPage.css
@@ -148,7 +148,7 @@ h6 {
 
 /* Custom CSS for radio buttons with labels below */
 
-.radio-btn {
+/*.radio-btn {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -175,7 +175,7 @@ h6 {
 }
 */
 
-.sometimes {
+/*.sometimes {
   position: relative !important;
   top: 40px !important;
   right: 45px !important;
@@ -231,7 +231,7 @@ h6 {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-}
+  }
 
   .h1 {
     font-size: 25px !important;
@@ -289,7 +289,7 @@ h6 {
   }
 
 
-  .question {
+  /*.question {
     font-size: 7.5px !important;
     max-width: 90%;
     text-align: center;
@@ -327,7 +327,7 @@ h6 {
 
   .next{
     height: 6vh;
-  }
+  }*/
 }
 
 
@@ -362,7 +362,7 @@ h6 {
 
 
 
-  .radio-btn {
+  /*.radio-btn {
     margin-right: 10px !important;
     margin-left: 10px !important;
   }
@@ -406,7 +406,7 @@ h6 {
 
   .next{
     height: 6vh;
-  }
+  }*/
 }
 
 
@@ -456,11 +456,9 @@ h6 {
   font-size: 0.7rem;
 }
 
-.input-box:checked + label {
-  color: blue;
+.blue-checked{
+  color: #0a53e6;
 }
-
-
 .next-button{
   text-align: center;
   margin: 2rem;
@@ -502,10 +500,10 @@ input[type="radio"].selected {
     color: #28282b;
     font-weight: 500;
   }
-  #input{
+  /*#input{
     width: 20px;
     height: 20px;
-  }
+  }*/
 }
 
 @media (max-width:768px){
@@ -560,7 +558,7 @@ input[type="radio"].selected {
     width: 12px;
     height: 12px;
   }
-  .cheked{
+  .checked{
     padding-top: 0.9rem;
     color: #696671;
     font-size: 0.6rem;
